Update media queries

--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer mt-auto" style="background-color: #2a2a2a">
+<footer class="footer mt-auto">
   <div class="container">
     <div class="row footer-links custom-flex">
       <div class="col acknowledge">
