--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer class="footer mt-auto">
   <div class="container">
     <div class="row footer-links custom-flex">
-      <div class="col acknowledge">
+      <div class="col set-width acknowledge">
         <a href="https://aaf.edu.au/" target="_blank">
           <img class="logo" src="{{ site.baseurl }}/assets/images/AAF-logo-REV-2023-600x360-1-300x180.webp" alt="AAF">
         </a>
@@ -41,6 +41,7 @@
         <ul class="list-unstyled footer-text">
           <li>ABN 13 155 355 685</li>
           <li>ACN 630 805 319</li>
+          <li>Trade Mark: 169 1608 ®</li>
           <li><a href="https://trust.aaf.edu.au/wp-content/uploads/AAF_PCY_Privacy-policy_v1.3_20230919-for-web-2.pdf">Privacy Policy</a></li>
           <li><a href="https://aaf.edu.au/wp-content/uploads/2020/10/AAF_PCY_Privacy-Collection-Notice-2020.pdf">Privacy Collection Notice</a></li>
         </ul>
@@ -62,17 +63,11 @@
           </a>
         </div>
         <br>
-        <div class="footer-text">
+        <div class="footer-text set-width">
           <p>The AAF Support Tutorials website utilises the code framework from Nectar Research Cloud, a service of the Australian Research Data Commons (ARDC).
             <a href="https://ardc.edu.au/about/" target="_blank">Read more about the ARDC.</a>
           </p>
         </div>
-      </div>
-    </div>
-    <hr>
-    <div class="row">
-      <div class="col footer-text">
-        <p class="text-center">© 2025 Australian Access Federation</p>
       </div>
     </div>
   </div> 
