Update footer layout (#149)
* Update footer layout

* Update media queries and add trademark

--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -1,10 +1,20 @@
-<footer class="footer mt-auto" style="background-color: #333333">
+<footer class="footer mt-auto">
   <div class="container">
-    <div class="row h-100 footer-links">
-      <div class="col-12 col-sm-3">
+    <div class="row footer-links custom-flex">
+      <div class="col set-width acknowledge">
         <a href="https://aaf.edu.au/" target="_blank">
           <img class="logo" src="{{ site.baseurl }}/assets/images/AAF-logo-REV-2023-600x360-1-300x180.webp" alt="AAF">
         </a>
+        <p class="footer-text">AAF acknowledges the First Australians on whose traditional lands we live and work, and we pay our respects to Elders past, present and emerging.</p>
+      </div>
+      <br>
+      <div class="col">
+        <h5>Contact Us</h5>
+        <ul class="list-unstyled footer-text">
+          <li><a href="mailto:enquiries@aaf.edu.au">enquiries@aaf.edu.au</a></li>
+          <li><a href="mailto:support@aaf.edu.au">support@aaf.edu.au</a></li>
+          <li>Phone: +61 7 3854 2353</li>
+        </ul>
         <div class="socials">
           <div class="icon" style="">
             <a href="https://twitter.com/ausaccessfed" target="_blank" style="margin-bottom: 10px;"
@@ -25,15 +35,19 @@
             </a>
           </div>
         </div>
-        <p>AAF acknowledges the First Australians on whose traditional lands we live and work, and we pay our respects to Elders past, present and emerging.</p>
-        <div class="footer-text">
-          <p>The AAF Support Tutorials website utilises the code framework from Nectar Research Cloud, a service of the Australian Research Data Commons (ARDC).
-            <a href="https://ardc.edu.au/about/" target="_blank">Read more about the ARDC.</a>
-          </p>
-        </div>
       </div>
-      <div class="col-12 col-sm-3">
-        <h5>External Resources</h5>
+      <div class="col">
+        <h5>Legal</h5>
+        <ul class="list-unstyled footer-text">
+          <li>ABN 13 155 355 685</li>
+          <li>ACN 630 805 319</li>
+          <li>Trade Mark: 169 1608 ®</li>
+          <li><a href="https://trust.aaf.edu.au/wp-content/uploads/AAF_PCY_Privacy-policy_v1.3_20230919-for-web-2.pdf">Privacy Policy</a></li>
+          <li><a href="https://aaf.edu.au/wp-content/uploads/2020/10/AAF_PCY_Privacy-Collection-Notice-2020.pdf">Privacy Collection Notice</a></li>
+        </ul>
+      </div>
+      <div class="col">
+        <h5>Resources</h5>
         <ul class="list-unstyled footer-text">
           <li><a href="https://aaf.edu.au/">AAF Home</a></li>
           <li><a href="https://manager.aaf.edu.au/">Federation Manager</a></li>
@@ -41,30 +55,19 @@
           <li><a href="https://status.aaf.edu.au/">Federation Status</a></li>
         </ul>
       </div>
-      <div class="col-12 col-sm-3">
+      <div class="col">
         <h5>Enabled by NCRIS</h5>
-        <div class="col-5 float-right">
+        <div class="col float-right">
           <a href="https://www.education.gov.au/ncris" target="_blank">
             <img class="ncris" src="{{ site.baseurl }}/assets/images/ncris_mono_rev.svg" alt="National Collaborative Research Infrastructure Strategy (NCRIS)">
           </a>
         </div>
-      </div>
-      <div class="col-12 col-sm-3">
-        <h5>Contact Us</h5>
-        <ul class="list-unstyled footer-text">
-          <li><a href="mailto:enquiries@aaf.edu.au">enquiries@aaf.edu.au</a></li>
-          <br>
-          <li><a href="mailto:support@aaf.edu.au">support@aaf.edu.au</a></li>
-          <br>
-          <li>Phone: +61 7 3854 2353</li>
-          <br>
-          <li>ABN 13 155 355 685</li>
-          <li>ACN 630 805 319</li>
-          <li>Trademark: 169 1608 ®</li>
-          <br>
-          <li><a href="https://trust.aaf.edu.au/wp-content/uploads/AAF_PCY_Privacy-policy_v1.3_20230919-for-web-2.pdf">Privacy Policy</a></li>
-          <li><a href="https://aaf.edu.au/wp-content/uploads/2020/10/AAF_PCY_Privacy-Collection-Notice-2020.pdf">Privacy Collection Notice</a></li>
-        </ul>
+        <br>
+        <div class="footer-text set-width">
+          <p>The AAF Support Tutorials website utilises the code framework from Nectar Research Cloud, a service of the Australian Research Data Commons (ARDC).
+            <a href="https://ardc.edu.au/about/" target="_blank">Read more about the ARDC.</a>
+          </p>
+        </div>
       </div>
     </div>
   </div> 
