Update colours and logo

--- a/docs/_sass/_variables.scss
+++ b/docs/_sass/_variables.scss
@@ -8,11 +8,12 @@ $form-label-font-weight: 600;
 // AAF colours
 $aaf-blue:   #00A2C4;
 $aaf-pink:   #E51875;
-$aaf-orange: #E37743;
-$aaf-yellow: #E89644;
+$aaf-orange: #F08528;
+$aaf-yellow: #F39D44;
 $aaf-indigo: #5F368A;
 $aaf-purple: #2A004A;
 $aaf-grey:   #969696;
+$aaf-dark-grey: #2a2a2a;
 
 // Override bootstrap colours
 $dark: #000000;
