--- a/docs/_includes/nav.html
+++ b/docs/_includes/nav.html
@@ -1,8 +1,6 @@
-<nav class="navbar navbar-expand-md navbar-dark bg-dark">
-  <div class="container py-2">
-    <a class="navbar-brand" href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/assets/images/aaflogo.png" height="60" class="mr-2" alt="AAF Tutorials">
-      Tutorials
-    </a>
+<nav class="navbar navbar-expand-md navbar-dark">
+  <div class="container mx-0">
+    <a class="navbar-brand" href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/assets/images/aaf_logo.png" height="60" class="mr-2" alt="AAF Tutorials"></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
