--- a/docs/_sass/_variables.scss
+++ b/docs/_sass/_variables.scss
@@ -13,7 +13,7 @@ $aaf-yellow: #F39D44;
 $aaf-indigo: #5F368A;
 $aaf-purple: #2A004A;
 $aaf-grey:   #969696;
-$aaf-dark-grey: #2a2a2a;
+$aaf-dark-grey: #2d2d2d;
 
 // Override bootstrap colours
 $dark: #000000;
@@ -25,13 +25,13 @@ $indigo: $aaf-indigo;
 $purple: $aaf-purple;
 $gray: $aaf-grey;
 
-$gray-100: #fcfcfc;
-$gray-200: #EEEEEE;
-$gray-300: #dddddd;
+$gray-100: #f3f3f3;
+$gray-200: #efefef;
+$gray-300: #e7e7e7;
 $gray-400: #c6c6c6;
 $gray-500: #999999;
-$gray-600: #666666;
-$gray-700: #333333;
+$gray-600: #707070;
+$gray-700: #2d2d2d;
 $gray-800: #222222;
 $gray-900: #111111;
 
