--- a/docs/assets/main.scss
+++ b/docs/assets/main.scss
@@ -99,7 +99,7 @@ header {
   font-weight: 300;
   font-style: normal;
   color: #dfdfdf;
-  background-color: #2a2a2a;
+  background-color: #2d2d2d;
   line-height: 1.8em;
 
   .footer-text {
