--- a/docs/assets/main.scss
+++ b/docs/assets/main.scss
@@ -15,6 +15,7 @@ $baseurl: "{{ site.baseurl }}";
 @import "font-awesome/fontawesome";
 @import "font-awesome/solid";
 @import "font-awesome/brands";
+@import "font-awesome/regular";
 @import "bootstrap-callouts";
 
 html,
