Add bluesky and reorder icons

--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -17,21 +17,27 @@
         </ul>
         <div class="socials">
           <div class="icon" style="">
-            <a href="https://twitter.com/ausaccessfed" target="_blank" style="margin-bottom: 10px;"
+            <a href=" https://bsky.app/profile/aaf.edu.au" target="_blank" style="margin-bottom: 10px;"
                rel="external noopener noreferrer">
-              <i class="fab fa-twitter"></i>
-            </a>
-          </div>
-          <div class="icon" style="">
-            <a href="https://www.youtube.com/channel/UC-lLEcDyxEkmVh_XFzkTriA" target="_blank" style="margin-bottom: 10px;"
-               rel="external noopener noreferrer">
-              <i class="fab fa-youtube"></i>
+              <i class="fab fa-square-bluesky"></i>
             </a>
           </div>
           <div class="icon" style="">
             <a href="https://www.linkedin.com/company/australian-access-federation-inc-" target="_blank" style="margin-bottom: 10px;"
                rel="external noopener noreferrer">
               <i class="fab fa-linkedin"></i>
+            </a>
+          </div>
+          <div class="icon" style="">
+            <a href="https://twitter.com/ausaccessfed" target="_blank" style="margin-bottom: 10px;"
+               rel="external noopener noreferrer">
+              <i class="fab fa-x-twitter"></i>
+            </a>
+          </div>
+          <div class="icon" style="">
+            <a href="https://www.youtube.com/channel/UC-lLEcDyxEkmVh_XFzkTriA" target="_blank" style="margin-bottom: 10px;"
+               rel="external noopener noreferrer">
+              <i class="fab fa-youtube"></i>
             </a>
           </div>
         </div>
