--- a/docs/_layouts/tutorial.html
+++ b/docs/_layouts/tutorial.html
@@ -22,6 +22,7 @@ layout: default
 
     <div class="d-block d-md-flex justify-content-between align-items-center pb-2 mb-3 border-bottom">
 	    <h1 class="display-4">{{ collection.title }}</h1>
+        <p>Last updated: {{ page.last_updated | date: "%B %d, %Y" }}</p>
       <div class="btn-toolbar mb-2 mb-md-0">
         <div class="btn-group mr-2">
           {% if prev -%}
