--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -1,22 +1,22 @@
-<footer class="footer mt-auto" style="background-color: #333333">
+<footer class="footer" style="background-color: #2a2a2a">
     <div class="container">
-        <div class="row h-100 footer-links">
-            <div class="col-12 col-sm-3">
+        <div class="row h-100 footer-links justify-content-center">
+            <div class="col-6 col-md-4 my-4">
                 <a href="https://aaf.edu.au/" target="_blank">
-                    <img class="logo" src="{{ site.baseurl }}/assets/images/AAF-logo-REV-2023-600x360-1-300x180.webp" alt="AAF">
+                    <img class="logo" src="{{ site.baseurl }}/assets/images/AAF_LGO_website_white_400x200.png" alt="AAF">
                 </a>
-                <p style="text-transform: uppercase;">Find us on socials #NCRISImpact</p>
+                <h6 style="text-transform: uppercase;">Find us on socials #NCRISImpact</h6>
                 <div class="socials">
                     <div class="icon" style="">
                         <a href=" https://bsky.app/profile/aaf.edu.au" target="_blank" style="margin-bottom: 10px;"
                            rel="external noopener noreferrer">
-                            <i class="fab fa-square-bluesky"></i>
+                            <i class="fab fa-bluesky"></i>
                         </a>
                     </div>
                     <div class="icon" style="">
                         <a href="https://twitter.com/ausaccessfed" target="_blank" style="margin-bottom: 10px;"
                            rel="external noopener noreferrer">
-                            <i class="fab fa-twitter"></i>
+                            <i class="fab fa-x-twitter"></i>
                         </a>
                     </div>
                     <div class="icon" style="">
@@ -28,37 +28,38 @@
                     <div class="icon" style="">
                         <a href="https://www.linkedin.com/company/australian-access-federation-inc-" target="_blank" style="margin-bottom: 10px;"
                            rel="external noopener noreferrer">
-                            <i class="fab fa-linkedin"></i>
+                            <i class="fab fa-linkedin-in"></i>
                         </a>
                     </div>
                 </div>
-                <p>AAF acknowledges the First Australians on whose traditional lands we live and work, and we pay our respects to Elders past, present and emerging.</p>
-                <div class="footer-text">
-                    <p>The AAF Support Tutorials website utilises the code framework from Nectar Research Cloud, a service of the Australian Research Data Commons (ARDC).
-                        <a href="https://ardc.edu.au/about/" target="_blank">Read more about the ARDC.</a>
-                    </p>
-                </div>
+                <p class="mt-3">AAF acknowledges the First Australians on whose traditional lands we live and work,
+                    and we pay our respects to Elders past, present and emerging.</p>
+                <p>The AAF Support Tutorials website utilises the code framework from Nectar Research Cloud, a service of the Australian Research Data Commons (ARDC).
+                    <a href="https://ardc.edu.au/about/" target="_blank">Read more about the ARDC.</a>
+                </p>
             </div>
-            <div class="col-12 col-sm-3">
-                <h5>Enabled by NCRIS</h5>
+            <div class="col-6 col-md-4">
+                <h6>Enabled by NCRIS</h6>
                 <div class="col-5 float-right">
                     <a href="https://www.education.gov.au/ncris" target="_blank">
                         <img class="ncris" src="{{ site.baseurl }}/assets/images/ncris_mono_rev.svg" alt="National Collaborative Research Infrastructure Strategy (NCRIS)">
                     </a>
                 </div>
                 <br>
-                <a href="https://aaf.edu.au/about/whats-happening-at-aaf/#creditaaf">Crediting AAF</a>
+                <p><a href="https://aaf.edu.au/about/whats-happening-at-aaf/#creditaaf">Crediting AAF</a></p>
                 <br>
                 <p>AAF is proud to be part of the NCRIS network. The National Collaborative Research
                     Infrastructure Strategy (NCRIS) gives researchers and industry access to equipment, data,
                     services and expertise to enable world-leading research and development for the benefit
                     of all Australians.</p>
                 <br>
-                <p>The capabilities available through the NCRIS network are vast. Find out more about how NCRIS can support your research through Research Infrastructure Connected.</p>
+                <p>The capabilities available through the NCRIS network are vast. Find out more about how NCRIS can
+                    support your research through <a href="https://riconnected.org.au/">Research Infrastructure
+                        Connected.</a></p>
             </div>
-            <div class="col-12 col-sm-3">
-                <h5>Contact Us</h5>
-                <ul class="list-unstyled footer-text">
+            <div class="col-6 col-md-4">
+                <h6>Contact Us</h6>
+                <ul class="list-unstyled">
                     <li>Support: <a href="mailto:support@aaf.edu.au">support@aaf.edu.au</a></li>
                     <br>
                     <li>General enquiries: <a href="mailto:enquiries@aaf.edu.au">enquiries@aaf.edu.au</a></li>
