Fix footer layout on smaller devices

--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer class="footer" style="background-color: #2a2a2a">
     <div class="container">
-        <div class="row h-100 footer-links justify-content-center">
+        <div class="row h-100 footer-content">
             <div class="col-6 col-md-4 my-4">
                 <a href="https://aaf.edu.au/" target="_blank">
                     <img class="logo" src="{{ site.baseurl }}/assets/images/AAF_LGO_website_white_400x200.png" alt="AAF">
