Use margin instead of br

--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer" style="background-color: #2a2a2a">
+<footer class="footer">
     <div class="container">
         <div class="row h-100 footer-content">
             <div class="col-6 col-md-4 my-4">
@@ -45,14 +45,11 @@
                         <img class="ncris" src="{{ site.baseurl }}/assets/images/ncris_mono_rev.svg" alt="National Collaborative Research Infrastructure Strategy (NCRIS)">
                     </a>
                 </div>
-                <br>
-                <p><a href="https://aaf.edu.au/about/whats-happening-at-aaf/#creditaaf">Crediting AAF</a></p>
-                <br>
+                <p class="credit"><a href="https://aaf.edu.au/about/whats-happening-at-aaf/#creditaaf">Crediting AAF</a></p>
                 <p>AAF is proud to be part of the NCRIS network. The National Collaborative Research
                     Infrastructure Strategy (NCRIS) gives researchers and industry access to equipment, data,
                     services and expertise to enable world-leading research and development for the benefit
                     of all Australians.</p>
-                <br>
                 <p>The capabilities available through the NCRIS network are vast. Find out more about how NCRIS can
                     support your research through <a href="https://riconnected.org.au/">Research Infrastructure
                         Connected.</a></p>
