--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -1,11 +1,26 @@
 <footer class="footer">
     <div class="container">
         <div class="row h-100 footer-content">
-            <div class="col-6 col-md-4 my-4">
+            <div class="col mb-4">
                 <a href="https://aaf.edu.au/" target="_blank">
                     <img class="logo" src="{{ site.baseurl }}/assets/images/AAF_LGO_website_white_400x200.png" alt="AAF">
                 </a>
-                <h6 style="text-transform: uppercase;">Find us on socials #NCRISImpact</h6>
+                <p class="mt-3">AAF acknowledges the First Australians on whose traditional lands we live and work,
+                    and we pay our respects to Elders past, present and emerging.</p>
+                <ul class="list-unstyled">
+                    <li>ABN 13 155 355 685</li>
+                    <li>ACN 630 805 319</li>
+                    <li>Trademark: 169 1608 ®</li>
+                    <li><a href="https://trust.aaf.edu.au/wp-content/uploads/AAF_PCY_Privacy-policy_v1.3_20230919-for-web-2.pdf">Privacy Policy</a></li>
+                    <li><a href="https://aaf.edu.au/wp-content/uploads/2020/10/AAF_PCY_Privacy-Collection-Notice-2020.pdf">Privacy Collection Notice</a></li>
+                </ul>
+                <p>The AAF Support Tutorials website utilises the code framework from Nectar Research Cloud, a service of the
+                    <a href="https://ardc.edu.au/about/" target="_blank">Australian Research Data Commons (ARDC).</a>
+                </p>
+            </div>
+            <div class="col">
+                <h6>Contact Us</h6>
+                <p style="text-transform: uppercase; color: white">Find us on socials #NCRISImpact</p>
                 <div class="socials">
                     <div class="icon" style="">
                         <a href=" https://bsky.app/profile/aaf.edu.au" target="_blank" style="margin-bottom: 10px;"
@@ -32,13 +47,14 @@
                         </a>
                     </div>
                 </div>
-                <p class="mt-3">AAF acknowledges the First Australians on whose traditional lands we live and work,
-                    and we pay our respects to Elders past, present and emerging.</p>
-                <p>The AAF Support Tutorials website utilises the code framework from Nectar Research Cloud, a service of the Australian Research Data Commons (ARDC).
-                    <a href="https://ardc.edu.au/about/" target="_blank">Read more about the ARDC.</a>
-                </p>
+                <ul class="list-unstyled">
+                    <li>Support: <a href="mailto:support@aaf.edu.au">support@aaf.edu.au</a></li>
+                    <li>General enquiries: <a href="mailto:enquiries@aaf.edu.au">enquiries@aaf.edu.au</a></li>
+                    <li>Media enquiries: <a href="https://media.aaf.edu.au">media@aaf.edu.au</a></li>
+                    <li>Phone: +61 7 3854 2353</li>
+                </ul>
             </div>
-            <div class="col-6 col-md-4">
+            <div class="col ncris-section">
                 <h6>Enabled by NCRIS</h6>
                 <div class="col-5 float-right">
                     <a href="https://www.education.gov.au/ncris" target="_blank">
@@ -53,25 +69,6 @@
                 <p>The capabilities available through the NCRIS network are vast. Find out more about how NCRIS can
                     support your research through <a href="https://riconnected.org.au/">Research Infrastructure
                         Connected.</a></p>
-            </div>
-            <div class="col-6 col-md-4">
-                <h6>Contact Us</h6>
-                <ul class="list-unstyled">
-                    <li>Support: <a href="mailto:support@aaf.edu.au">support@aaf.edu.au</a></li>
-                    <br>
-                    <li>General enquiries: <a href="mailto:enquiries@aaf.edu.au">enquiries@aaf.edu.au</a></li>
-                    <br>
-                    <li>Media enquiries: <a href="https://media.aaf.edu.au">media@aaf.edu.au</a></li>
-                    <br>
-                    <li>Phone: +61 7 3854 2353</li>
-                    <br>
-                    <li>ABN 13 155 355 685</li>
-                    <li>ACN 630 805 319</li>
-                    <li>Trademark: 169 1608 ®</li>
-                    <br>
-                    <li><a href="https://trust.aaf.edu.au/wp-content/uploads/AAF_PCY_Privacy-policy_v1.3_20230919-for-web-2.pdf">Privacy Policy</a></li>
-                    <li><a href="https://aaf.edu.au/wp-content/uploads/2020/10/AAF_PCY_Privacy-Collection-Notice-2020.pdf">Privacy Collection Notice</a></li>
-                </ul>
             </div>
         </div>
     </div>
