--- a/docs/assets/main.scss
+++ b/docs/assets/main.scss
@@ -100,7 +100,7 @@ header {
   .container {
       display: flex;
       flex-direction: row;
-      justify-content: space-between;
+      justify-content: space-evenly;
       align-items: flex-start;
       flex-wrap: wrap;
   }
@@ -120,6 +120,10 @@ header {
     ul {
       list-style: none;
     }
+  }
+
+  ul.list-unstyled li {
+    margin-bottom: 0.5em;
   }
 
   h6 {
@@ -153,7 +157,7 @@ header {
 
   .logo {
     width: 250px; /* Default size */
-    margin-bottom: 25px;
+    margin-bottom: 15px;
   }
 
   .ncris {
@@ -230,6 +234,10 @@ header {
       flex-direction: column;
       align-items: start;
     }
+
+    .ncris-section {
+      margin-top: 30px;
+    }
   }
 
   /* Extra small devices (portrait phones, less than 576px) */
@@ -252,6 +260,7 @@ header {
     display: flex;
     flex-direction: row;
     gap: 20px;
+    margin-bottom: 20px;
   }
 
   .socials a {
