Update footer to be the same as on the AAF website (#184)
* Update footer

* Update icons, sizing and font type

* Fix footer layout on smaller devices

* Use margin instead of br

--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -1,80 +1,75 @@
-<footer class="footer mt-auto">
-  <div class="container">
-    <div class="row footer-links custom-flex">
-      <div class="col set-width acknowledge">
-        <a href="https://aaf.edu.au/" target="_blank">
-          <img class="logo" src="{{ site.baseurl }}/assets/images/AAF-logo-REV-2023-600x360-1-300x180.webp" alt="AAF">
-        </a>
-        <p class="footer-text">AAF acknowledges the First Australians on whose traditional lands we live and work, and we pay our respects to Elders past, present and emerging.</p>
-      </div>
-      <br>
-      <div class="col">
-        <h5>Contact Us</h5>
-        <ul class="list-unstyled footer-text">
-          <li><a href="mailto:enquiries@aaf.edu.au">enquiries@aaf.edu.au</a></li>
-          <li><a href="mailto:support@aaf.edu.au">support@aaf.edu.au</a></li>
-          <li>Phone: +61 7 3854 2353</li>
-        </ul>
-        <div class="socials">
-          <div class="icon" style="">
-            <a href=" https://bsky.app/profile/aaf.edu.au" target="_blank" style="margin-bottom: 10px;"
-               rel="external noopener noreferrer">
-              <i class="fab fa-square-bluesky"></i>
-            </a>
-          </div>
-          <div class="icon" style="">
-            <a href="https://www.linkedin.com/company/australian-access-federation-inc-" target="_blank" style="margin-bottom: 10px;"
-               rel="external noopener noreferrer">
-              <i class="fab fa-linkedin"></i>
-            </a>
-          </div>
-          <div class="icon" style="">
-            <a href="https://twitter.com/ausaccessfed" target="_blank" style="margin-bottom: 10px;"
-               rel="external noopener noreferrer">
-              <i class="fab fa-x-twitter"></i>
-            </a>
-          </div>
-          <div class="icon" style="">
-            <a href="https://www.youtube.com/channel/UC-lLEcDyxEkmVh_XFzkTriA" target="_blank" style="margin-bottom: 10px;"
-               rel="external noopener noreferrer">
-              <i class="fab fa-youtube"></i>
-            </a>
-          </div>
+<footer class="footer">
+    <div class="container">
+        <div class="row h-100 footer-content">
+            <div class="col mb-4">
+                <a href="https://aaf.edu.au/" target="_blank">
+                    <img class="logo" src="{{ site.baseurl }}/assets/images/AAF_LGO_website_white_400x200.png" alt="AAF">
+                </a>
+                <p class="mt-3">AAF acknowledges the First Australians on whose traditional lands we live and work,
+                    and we pay our respects to Elders past, present and emerging.</p>
+                <ul class="list-unstyled">
+                    <li>ABN 13 155 355 685</li>
+                    <li>ACN 630 805 319</li>
+                    <li>Trademark: 169 1608 ®</li>
+                    <li><a href="https://trust.aaf.edu.au/wp-content/uploads/AAF_PCY_Privacy-policy_v1.3_20230919-for-web-2.pdf">Privacy Policy</a></li>
+                    <li><a href="https://aaf.edu.au/wp-content/uploads/2020/10/AAF_PCY_Privacy-Collection-Notice-2020.pdf">Privacy Collection Notice</a></li>
+                </ul>
+                <p>The AAF Support Tutorials website utilises the code framework from Nectar Research Cloud, a service of the
+                    <a href="https://ardc.edu.au/about/" target="_blank">Australian Research Data Commons (ARDC).</a>
+                </p>
+            </div>
+            <div class="col">
+                <h6>Contact Us</h6>
+                <p style="text-transform: uppercase; color: white">Find us on socials #NCRISImpact</p>
+                <div class="socials">
+                    <div class="icon" style="">
+                        <a href=" https://bsky.app/profile/aaf.edu.au" target="_blank" style="margin-bottom: 10px;"
+                           rel="external noopener noreferrer">
+                            <i class="fab fa-bluesky"></i>
+                        </a>
+                    </div>
+                    <div class="icon" style="">
+                        <a href="https://twitter.com/ausaccessfed" target="_blank" style="margin-bottom: 10px;"
+                           rel="external noopener noreferrer">
+                            <i class="fab fa-x-twitter"></i>
+                        </a>
+                    </div>
+                    <div class="icon" style="">
+                        <a href="https://www.youtube.com/channel/UC-lLEcDyxEkmVh_XFzkTriA" target="_blank" style="margin-bottom: 10px;"
+                           rel="external noopener noreferrer">
+                            <i class="fab fa-youtube"></i>
+                        </a>
+                    </div>
+                    <div class="icon" style="">
+                        <a href="https://www.linkedin.com/company/australian-access-federation-inc-" target="_blank" style="margin-bottom: 10px;"
+                           rel="external noopener noreferrer">
+                            <i class="fab fa-linkedin-in"></i>
+                        </a>
+                    </div>
+                </div>
+                <ul class="list-unstyled">
+                    <li>Support: <a href="mailto:support@aaf.edu.au">support@aaf.edu.au</a></li>
+                    <li>General enquiries: <a href="mailto:enquiries@aaf.edu.au">enquiries@aaf.edu.au</a></li>
+                    <li>Media enquiries: <a href="https://media.aaf.edu.au">media@aaf.edu.au</a></li>
+                    <li>Phone: +61 7 3854 2353</li>
+                </ul>
+            </div>
+            <div class="col ncris-section">
+                <h6>Enabled by NCRIS</h6>
+                <div class="col-5 float-right">
+                    <a href="https://www.education.gov.au/ncris" target="_blank">
+                        <img class="ncris" src="{{ site.baseurl }}/assets/images/ncris_mono_rev.svg" alt="National Collaborative Research Infrastructure Strategy (NCRIS)">
+                    </a>
+                </div>
+                <p class="credit"><a href="https://aaf.edu.au/about/whats-happening-at-aaf/#creditaaf">Crediting AAF</a></p>
+                <p>AAF is proud to be part of the NCRIS network. The National Collaborative Research
+                    Infrastructure Strategy (NCRIS) gives researchers and industry access to equipment, data,
+                    services and expertise to enable world-leading research and development for the benefit
+                    of all Australians.</p>
+                <p>The capabilities available through the NCRIS network are vast. Find out more about how NCRIS can
+                    support your research through <a href="https://riconnected.org.au/">Research Infrastructure
+                        Connected.</a></p>
+            </div>
         </div>
-      </div>
-      <div class="col">
-        <h5>Legal</h5>
-        <ul class="list-unstyled footer-text">
-          <li>ABN 13 155 355 685</li>
-          <li>ACN 630 805 319</li>
-          <li>Trade Mark: 169 1608 ®</li>
-          <li><a href="https://trust.aaf.edu.au/wp-content/uploads/AAF_PCY_Privacy-policy_v1.3_20230919-for-web-2.pdf">Privacy Policy</a></li>
-          <li><a href="https://aaf.edu.au/wp-content/uploads/2020/10/AAF_PCY_Privacy-Collection-Notice-2020.pdf">Privacy Collection Notice</a></li>
-        </ul>
-      </div>
-      <div class="col">
-        <h5>Resources</h5>
-        <ul class="list-unstyled footer-text">
-          <li><a href="https://aaf.edu.au/">AAF Home</a></li>
-          <li><a href="https://manager.aaf.edu.au/">Federation Manager</a></li>
-          <li><a href="https://validator.aaf.edu.au/">Validator Service</a></li>
-          <li><a href="https://status.aaf.edu.au/">Federation Status</a></li>
-        </ul>
-      </div>
-      <div class="col">
-        <h5>Enabled by NCRIS</h5>
-        <div class="col float-right">
-          <a href="https://www.education.gov.au/ncris" target="_blank">
-            <img class="ncris" src="{{ site.baseurl }}/assets/images/ncris_mono_rev.svg" alt="National Collaborative Research Infrastructure Strategy (NCRIS)">
-          </a>
-        </div>
-        <br>
-        <div class="footer-text set-width">
-          <p>The AAF Support Tutorials website utilises the code framework from Nectar Research Cloud, a service of the Australian Research Data Commons (ARDC).
-            <a href="https://ardc.edu.au/about/" target="_blank">Read more about the ARDC.</a>
-          </p>
-        </div>
-      </div>
     </div>
-  </div> 
 </footer>
