--- a/docs/assets/main.scss
+++ b/docs/assets/main.scss
@@ -4,8 +4,7 @@
 $baseurl: "{{ site.baseurl }}";
 
 // Use AAF Raleway Google Font
-@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 
 @import "variables";
 @import "bootstrap/bootstrap";
@@ -24,13 +23,13 @@ main {
 
 .h1, .h2, .h3, .h4, .h5, .h6, 
 h1, h2, h3, h4, h5, h6 {
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Inter', sans-serif;
   font-style: normal;
   font-weight: 600;
 }
 
 .p {
-  font-family: 'Lato', sans-serif;
+  font-family: 'Inter', sans-serif;
 }
 
 .btn {
@@ -90,14 +89,21 @@ header {
  * Footer
  */
 .footer {
-  padding-top: 40px;
-  padding-bottom: 20px;
+  padding: 80px 0;
   font-family: "Lato", sans-serif;
   font-weight: 300;
   font-style: normal;
-  color: #dfdfdf;
-  background-color: #2d2d2d;
-  line-height: 1.8em;
+  color: #bdbdbd;
+  background-color: #2a2a2a;
+  line-height: 1.9em;
+
+  .container {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-evenly;
+      align-items: flex-start;
+      flex-wrap: wrap;
+  }
 
   .footer-text {
     font-size: 0.8em;
@@ -116,9 +122,13 @@ header {
     }
   }
 
-  h5 {
+  ul.list-unstyled li {
+    margin-bottom: 0.5em;
+  }
+
+  h6 {
     text-transform: uppercase;
-    font-family: "Lato", sans-serif;
+    font-family: "Inter", sans-serif;
     font-weight: 300;
     font-style: normal;
     color: #ffffff;
@@ -130,23 +140,28 @@ header {
       height: 3px;
       display: block;
       margin-top: 10px;
+      margin-bottom: 25px;
       max-width: 50px;
     }
   }
 
-  .footer-links {
+  .footer-content {
     a {
       color: $info;
       text-decoration: none;
+      &:hover {
+        color: $aaf-orange;
+      }
     }
   }
 
   .logo {
-    width: 200px; /* Default size */
+    width: 250px; /* Default size */
+    margin-bottom: 15px;
   }
 
   .ncris {
-    width: 100px; /* Default size */
+    width: 161px; /* Default size */
   }
 
   .custom-flex {
@@ -159,24 +174,17 @@ header {
     margin-right: 40px;
   }
 
+  .credit {
+    margin-top: 40px;
+    margin-bottom: 20px;
+  }
+
   /* Extra large devices (large desktops, 1200px and up) */
     @media (min-width: 1200px) {
-        .logo {
-        width: 200px;
-        }
-
-        .ncris {
-        width: 100px;
-        }
-
-        .acknowledge {
-        margin-right: 50px;
-        }
-
-        .card-container {
-        margin-left: 0;
-        margin-right: 0;
-        }
+      .card-container {
+      margin-left: 0;
+      margin-right: 0;
+      }
     }
 
   /* Large devices (desktops, 992px and up) */
@@ -184,18 +192,6 @@ header {
     .custom-flex {
       flex-direction: row;
       justify-content: space-between;
-    }
-
-    .logo {
-      width: 180px;
-    }
-
-    .ncris {
-      width: 90px;
-    }
-
-    .acknowledge {
-      margin-right: 20px;
     }
 
     .card-container {
@@ -210,17 +206,13 @@ header {
       flex: 1 1 50%; /* Two columns per row */
     }
 
-    .logo {
-      width: 170px;
-    }
-
-    .ncris {
-      width: 80px;
-    }
-
     .set-width {
       max-width: 40%;
       margin-right: 40px;
+    }
+
+    .logo {
+      width: 200px;
     }
   }
 
@@ -230,17 +222,21 @@ header {
       flex-direction: column;
     }
 
-    .ncris {
-      width: 70px;
-      margin-bottom: 20px;
+    .set-width {
+      max-width: 50%;
     }
 
     .logo {
-      width: 130px;
+      width: 200px;
     }
 
-    .set-width {
-      max-width: 50%;
+    .footer-content {
+      flex-direction: column;
+      align-items: start;
+    }
+
+    .ncris-section {
+      margin-top: 30px;
     }
   }
 
@@ -250,17 +246,9 @@ header {
       flex-direction: column;
     }
 
-    .ncris {
-      width: 60px;
-      margin-bottom: 20px;
-    }
-
-    .logo {
-      width: 100px;
-    }
-
-    .footer-text {
-      text-align: start;
+    .footer-content {
+      flex-direction: column;
+      align-items: start;
     }
 
     .set-width {
@@ -269,19 +257,35 @@ header {
   }
 
   .socials {
-    a {
-      color: #dfdfdf;
-      &:hover {
-        color: $aaf-yellow;
-      }
-    }
     display: flex;
-    justify-content: flex-start;
+    flex-direction: row;
+    gap: 20px;
+    margin-bottom: 20px;
   }
-  .socials i {
-    margin-right: 7px;
-    margin-bottom: 30px;
-    font-size: 20px;
+
+  .socials a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #393939;
+    border-radius: 3px;
+    transition: background 0.2s;
+    width: 2em;
+    height: 2em;
+  }
+
+  .socials a i {
+    color: #fff;
+    font-size: 0.9em;
+    transition: color 0.2s;
+  }
+
+  .socials a:hover {
+    background: $aaf-purple;
+  }
+
+  .socials a:hover i {
+    color: $aaf-orange;
   }
 }
 
