Improve colour contrast

--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -23,25 +23,30 @@
                 <p style="text-transform: uppercase; color: white">Find us on socials #NCRISImpact</p>
                 <div class="socials">
                     <div class="icon" style="">
-                        <a href=" https://bsky.app/profile/aaf.edu.au" target="_blank" style="margin-bottom: 10px;"
+                        <a href=" https://bsky.app/profile/aaf.edu.au" aria-label="bluesky" target="_blank"
+                           style="margin-bottom: 10px;"
                            rel="external noopener noreferrer">
                             <i class="fab fa-bluesky"></i>
                         </a>
                     </div>
                     <div class="icon" style="">
-                        <a href="https://twitter.com/ausaccessfed" target="_blank" style="margin-bottom: 10px;"
+                        <a href="https://twitter.com/ausaccessfed" aria-label="Twitter" target="_blank"
+                           style="margin-bottom:
+                        10px;"
                            rel="external noopener noreferrer">
                             <i class="fab fa-x-twitter"></i>
                         </a>
                     </div>
                     <div class="icon" style="">
-                        <a href="https://www.youtube.com/channel/UC-lLEcDyxEkmVh_XFzkTriA" target="_blank" style="margin-bottom: 10px;"
+                        <a href="https://www.youtube.com/channel/UC-lLEcDyxEkmVh_XFzkTriA" aria-label="Youtube"
+                           target="_blank" style="margin-bottom: 10px;"
                            rel="external noopener noreferrer">
                             <i class="fab fa-youtube"></i>
                         </a>
                     </div>
                     <div class="icon" style="">
-                        <a href="https://www.linkedin.com/company/australian-access-federation-inc-" target="_blank" style="margin-bottom: 10px;"
+                        <a href="https://www.linkedin.com/company/australian-access-federation-inc-"
+                           aria-label="LinkedIn" target="_blank" style="margin-bottom: 10px;"
                            rel="external noopener noreferrer">
                             <i class="fab fa-linkedin-in"></i>
                         </a>
