--- a/docs/_sass/_variables.scss
+++ b/docs/_sass/_variables.scss
@@ -6,7 +6,7 @@ $font-size-base: 1rem;
 $form-label-font-weight: 600;
 
 // AAF colours
-$aaf-blue:   #00A2C4;
+$aaf-blue:   #0066CC;
 $aaf-pink:   #E51875;
 $aaf-orange: #F08528;
 $aaf-yellow: #F39D44;
@@ -38,7 +38,7 @@ $gray-900: #111111;
 $primary:       $yellow;
 $secondary:     $indigo;
 $success:       #62C400;
-$info:          $blue;
+$info:          #00A2C4;
 $warning:       $orange;
 $danger:        $pink;
 
