--- a/docs/_layouts/tutorial.html
+++ b/docs/_layouts/tutorial.html
@@ -42,22 +42,22 @@ layout: default
       <div class="col-md-3 d-none d-md-block">
         <div class="sidebar py-3 sticky-top">
           {% if collection.curriculum %}
-            <div class="p-2">
+            <div class="sidebar-btn-link p-2">
               <p class="mb-1"><i class="fa fa-info-circle"></i> This tutorial is part of the {{ collection.curriculum }} Series.</p>
               {% if collection.curriculum == "OpenID Connect" %}
-              <a class="btn btn-link btn-sm p-0"
+              <a class="btn btn-link btn-md p-0"
                  href="{{ '/openid-connect-series/02-tutorials' | prepend: site.baseurl }}"><i class="fa fa-arrow-left"></i> Back to OpenID Connect</a>
               {% elsif collection.curriculum == "Rapid Connect" %}
-              <a class="btn btn-link btn-sm p-0"
+              <a class="btn btn-link btn-md p-0"
                  href="{{ '/rapid-connect-series/02-tutorials' | prepend: site.baseurl }}"><i class="fa fa-arrow-left"></i> Back to Rapid Connect</a>
               {% elsif collection.curriculum == "SAML" %}
-              <a class="btn btn-link btn-sm p-0"
+              <a class="btn btn-link btn-md p-0"
                  href="{{ '/saml-series/02-tutorials' | prepend: site.baseurl }}"><i class="fa fa-arrow-left"></i> Back to SAML</a>
               {% elsif collection.curriculum == "VerifID" %}
-              <a class="btn btn-link btn-sm p-0"
+              <a class="btn btn-link btn-md p-0"
                  href="{{ '/verifid-series/02-tutorials' | prepend: site.baseurl }}"><i class="fa fa-arrow-left"></i> Back to VerifID</a>
               {% elsif collection.curriculum == "eduGAIN" %}
-              <a class="btn btn-link btn-sm p-0"
+              <a class="btn btn-link btn-md p-0"
                  href="{{ '/edugain-series/02-tutorials' | prepend: site.baseurl }}"><i class="fa fa-arrow-left"></i> Back to eduGAIN</a>
               {% endif %}
             </div>
@@ -104,16 +104,16 @@ layout: default
     <div class="row">
       <div class="col-sm-12 col-md-8 offset-md-2">
         {% if next %}
-          <h3>Up Next:</h3>
+          <h2>Up Next:</h2>
           <p class="lead"><a href="{{ next.url | prepend: site.baseurl }}" class="text-dark">{{ next.order }}. {{
             next.title }} <i class="fa fa-arrow-right"></i></a></p>
         {% else %}
           {% if collection.level == 'Series' %}
-            <h3>Series Complete!</h3>
+            <h2>Series Complete!</h2>
             <p>You have completed this Series of Tutorials. Return to the tutorials home page to explore other tutorials.</p>
             <a href="{{ site.baseurl }}/" class="btn bg-secondary text-white" role="button">Return Home</a>
           {% else %}
-            <h3>Tutorial Complete!</h3>
+            <h2>Tutorial Complete!</h2>
             <p>You have completed this tutorial. Continue with the other tutorials in the {{ page.category }} Series or return to the tutorials home page.</p>
             {% if collection.curriculum %}
               {% if collection.curriculum == "OpenID Connect" %}
