Improve text contrast and scrolling

--- a/docs/_layouts/tutorial.html
+++ b/docs/_layouts/tutorial.html
@@ -128,8 +128,7 @@ layout: default
                 <a class="btn btn-secondary" href="{{ '/edugain-series/02-tutorials' | prepend: site.baseurl }}">Continue Series</a>
               {% endif %}
               {% endif %}
-            <a href="{{ site.baseurl }}/" class="btn btn-outline-secondary" role="button">Return
-              Home</a>
+            <a href="{{ site.baseurl }}/" class="btn btn-secondary" role="button">Return Home</a>
           {% endif %}
         {% endif %}
       </div>
